UI updates to include save/cancel buttons and new positions for all; also added initial URL scheme for launching from Today

--- a/Quotables/Info.plist
+++ b/Quotables/Info.plist
@@ -36,5 +36,17 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>quotable</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>quotable</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
